discussion/kv_engine/174181/174181_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: add frontendflush histo

Change-Id: I2a8fcab59cfc88d087409a980a5ed67b8e5bd866

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-04-26 05:09:18.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 05:19:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38323/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38323/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16975/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34: error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats" [clang-diagnostic-error]
                      histoStats.FrontendFlushTime,
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16975/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16975/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45618/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3105): error C2039: "FrontendFlushTime": is not a member of "magma::MagmaHistogramStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19103/ : FAILURE

Compile error at [2022-04-26T05:12:51.902Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: ?struct magma::MagmaHistogramStats? has no member named ?FrontendFlushTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6634/ : FAILURE

Compile error at [2022-04-26T05:15:49.744Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19801/ : FAILURE

Compile error at [2022-04-26T05:10:54.449Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19801/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27174/ : FAILURE

Compile error at [2022-04-26T05:15:53.985Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27174/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17881/ : FAILURE

Compile error at [2022-04-26T05:12:20.001Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6727/ : FAILURE

Compile error at [2022-04-26T05:11:41.359Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: ?struct magma::MagmaHistogramStats? has no member named ?FrontendFlushTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6727/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15943/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18759/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
